[package]
name = "mpinger-srv"
description = "MPinger is a versatile multi-host roundtrip time (ping) measure tool that employs a variety of methods to efficiently ping destination hosts"
version = "1.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Paul Jonkins <paul.jonkins@gmail.com>"]
readme = "README.md"
repository = "https://github.com/wizzard/mpinger-rs"
categories = ["command-line-interface"]
keywords = ["ping", "cli", "network"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5.1"
env_logger = "0.11.8"
log = "0.4.29"
mpinger = { path = "../mpinger-lib" }
time = "0.3.45"
tokio = { version = "1", features = ["full"] }
tprint = "1.0.1"
